Check readLine's return value and return false on error, thus do not busy-wait forever when shutting down kio_sieve instances

BUG:163695

svn path=/branches/kdepim/enterprise4/kdepimlibs/; revision=820965